--- a/src/app/chameleon-reports/med-execution-table/med-execution-table.component.scss
+++ b/src/app/chameleon-reports/med-execution-table/med-execution-table.component.scss
@@ -18,6 +18,18 @@ table {
     left: 50%;
     display: unset;
 }
+.spinner-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.8);
+    z-index: 1000;
+}
 
 .mat-row:nth-child(even) {
     background-color: aliceblue;
@@ -79,7 +91,9 @@ a {
     width: 170px; /* Adjust the width to your desired size */
     height: 0px;
 }
-
+::ng-deep .mat-form-field {
+    width: 100%;
+}
 /* Add margin to the mat-form-field elements */
 .filter-field {
     margin-right: 20px; /* Adjust the margin as needed */
@@ -103,18 +117,19 @@ a {
 /* CSS */
 .filter-container {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap; /* Change to nowrap to prevent wrapping to the next line */
     justify-content: space-between;
     align-items: center;
+    width: 100%;
 }
 
 .filter-field {
     flex-grow: 1;
     margin-right: 20px;
-    width: calc(20% - 20px); /* 25% to fit four filters in a row with spacing */
+    min-width: 200px; /* Ensure the fields have a minimum width */
+    max-width: calc(100% / 6 - 20px); /* Adjust this calculation to fit the desired number of filters per row */
 }
 
-/* Add this CSS to ensure proper alignment of name-select */
 .name-select {
     width: 100%;
 }
@@ -288,4 +303,31 @@ a {
 
 button i.material-icons {
     font-size: 24px; /* Ensure all icons inside buttons have the same size */
+}
+.creator-message {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    margin: 20px;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    border-radius: 5px;
+    display: none;
+    z-index: 1001;
+}
+
+.hover-area {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100px; /* Adjust the width as needed */
+    height: 100px; /* Adjust the height as needed */
+    z-index: 1000;
+    cursor: pointer;
+}
+
+/* Ensure the creator message is shown when hovering over the hover area */
+.hover-area:hover + .creator-message {
+    display: block;
 }
