--- a/src/app/Monday/tasks/tasks.component.html
+++ b/src/app/Monday/tasks/tasks.component.html
@@ -1,20 +1,26 @@
-<div *ngIf="tasks.length > 0">
-    <h2>Tasks for Board ID: {{ boardId }}</h2>
-    <div *ngFor="let task of tasks" class="task-card">
-      <mat-card>
-        <mat-card-header>
-          <mat-card-title>{{ task.name }}</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <div *ngFor="let column of task.column_values" class="column-value">
-            <strong>{{ getColumnTitle(column.id) }} ({{ column.type }}):</strong> 
-            {{ column.text ? column.text : 'No text available' }}
-          </div>
-        </mat-card-content>
-      </mat-card>
+<div *ngIf="board">
+    <h2>Tasks for Board ID: {{ board.id }}</h2>
+    <div *ngFor="let group of board.groups">
+      <h3>{{ group.title }}</h3>
+      <table mat-table [dataSource]="group.items_page.items" class="mat-elevation-z8">
+  
+        <!-- Task Name Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Task Name </th>
+          <td mat-cell *matCellDef="let task"> {{ task.name }} </td>
+        </ng-container>
+  
+        <!-- Dynamic Columns -->
+        <ng-container *ngFor="let column of dynamicColumns" [matColumnDef]="column.id">
+          <th mat-header-cell *matHeaderCellDef> {{ column.id }} ({{ column.type }}) </th>
+          <td mat-cell *matCellDef="let task">
+            {{ getColumnText(task.column_values, column.id) }}
+          </td>
+        </ng-container>
+  
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
     </div>
-  </div>
-  <div *ngIf="tasks.length === 0">
-    <h2>No tasks available for Board ID: {{ boardId }}</h2>
   </div>
   
