--- a/src/app/Monday/tasks/tasks.component.html
+++ b/src/app/Monday/tasks/tasks.component.html
@@ -2,7 +2,7 @@
     <h2>Tasks for Board ID: {{ board.id }}</h2>
     <div *ngFor="let group of board.groups">
       <h3>{{ group.title }}</h3>
-      <table mat-table [dataSource]="group.items_page.items" class="mat-elevation-z8">
+      <table mat-table [dataSource]="getGroupDataSource(group)" class="mat-elevation-z8">
   
         <!-- Task Name Column -->
         <ng-container matColumnDef="name">
@@ -12,7 +12,7 @@
   
         <!-- Dynamic Columns -->
         <ng-container *ngFor="let column of dynamicColumns" [matColumnDef]="column.id">
-          <th mat-header-cell *matHeaderCellDef> {{ column.id }} ({{ column.type }}) </th>
+          <th mat-header-cell *matHeaderCellDef> {{ column.title }} ({{ column.type }}) </th>
           <td mat-cell *matCellDef="let task">
             {{ getColumnText(task.column_values, column.id) }}
           </td>
