--- a/src/app/Monday/tasks/tasks.component.scss
+++ b/src/app/Monday/tasks/tasks.component.scss
@@ -1,24 +1,32 @@
-.mat-list-item {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-bottom: 16px;
-  
-    h3 {
-      margin: 0;
-      font-size: 1.2em;
-    }
-  
-    p {
-      margin: 0;
-      font-size: 0.9em;
-    }
-  }
-  .task-card {
+.task-card {
     margin-bottom: 20px;
   }
   
   .column-value {
     margin-bottom: 10px;
+  }
+  
+  .mat-elevation-z8 {
+    margin: 20px 0;
+  }
+  
+  .mat-header-cell, .mat-cell {
+    padding: 8px 16px;
+  }
+  
+  .mat-header-cell {
+    font-weight: bold;
+  }
+  
+  .mat-form-field {
+    margin-right: 16px;
+  }
+  
+  mat-form-field {
+    width: 100%;
+  }
+  
+  table {
+    width: 100%;
   }
   
