--- a/src/app/Monday/tasks/tasks.component.html
+++ b/src/app/Monday/tasks/tasks.component.html
@@ -1,26 +1,29 @@
 <div *ngIf="board">
     <h2>Tasks for Board ID: {{ board.id }}</h2>
     <div *ngFor="let group of board.groups">
-      <h3>{{ group.title }}</h3>
-      <table mat-table [dataSource]="getGroupDataSource(group)" class="mat-elevation-z8">
+      <h3 (click)="toggleGroupCollapse(group)" style="cursor: pointer;">
+        {{ group.title }} {{ group.isCollapsed ? '+' : '-' }}
+      </h3>
+      <div *ngIf="!group.isCollapsed">
+        <table mat-table [dataSource]="group.items_page.items" class="mat-elevation-z8">
+          <!-- Task Name Column -->
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Task Name </th>
+            <td mat-cell *matCellDef="let task"> {{ task.name }} </td>
+          </ng-container>
   
-        <!-- Task Name Column -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Task Name </th>
-          <td mat-cell *matCellDef="let task"> {{ task.name }} </td>
-        </ng-container>
+          <!-- Dynamic Columns -->
+          <ng-container *ngFor="let column of dynamicColumns" [matColumnDef]="column.id">
+            <th mat-header-cell *matHeaderCellDef> {{ column.title }} ({{ column.type }}) </th>
+            <td mat-cell *matCellDef="let task">
+              {{ getColumnText(task.column_values, column.id) }}
+            </td>
+          </ng-container>
   
-        <!-- Dynamic Columns -->
-        <ng-container *ngFor="let column of dynamicColumns" [matColumnDef]="column.id">
-          <th mat-header-cell *matHeaderCellDef> {{ column.title }} ({{ column.type }}) </th>
-          <td mat-cell *matCellDef="let task">
-            {{ getColumnText(task.column_values, column.id) }}
-          </td>
-        </ng-container>
-  
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      </div>
     </div>
   </div>
   
