--- a/src/app/Monday/tasks/tasks.component.html
+++ b/src/app/Monday/tasks/tasks.component.html
@@ -14,7 +14,7 @@
               <input matInput (keyup)="applyColumnFilter($event, column, group.id)" placeholder="Filter">
             </th>
             <td mat-cell *matCellDef="let task">
-              {{ getColumnText(task.column_values, column) }}
+              {{ column === 'name' ? task.name : getColumnText(task.column_values, column) }}
             </td>
           </ng-container>
   
