--- a/src/app/Monday/tasks/tasks.component.scss
+++ b/src/app/Monday/tasks/tasks.component.scss
@@ -1,12 +1,14 @@
 :host {
     display: block;
     padding: 16px;
+    direction: rtl;
   }
   
   h1 {
     margin-bottom: 16px;
     font-size: 24px;
     color: #3f51b5;
+    text-align: right;
   }
   
   .group-list {
@@ -18,7 +20,7 @@
   .group-card {
     cursor: pointer;
     transition: box-shadow 0.3s ease-in-out;
-    
+  
     &:hover {
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
     }
@@ -32,25 +34,32 @@
   
   mat-card-title {
     font-size: 18px;
+    text-align: right;
   }
   
   mat-card-content {
     padding: 16px;
+    overflow-x: auto; /* Ensure horizontal scrollbar is visible */
+    direction: rtl; /* Ensure the scrollbar is on the left side */
+    text-align: left;
   }
   
   table {
     width: 100%;
     table-layout: auto;
+    direction: rtl; /* Ensure table content is in RTL */
   
     th.mat-header-cell {
       white-space: nowrap;
       padding: 4px 8px;
       background-color: #f1f1f1;
+      text-align: right;
     }
   
     td.mat-cell {
       white-space: nowrap;
       padding: 4px 8px;
+      text-align: right;
     }
   
     th.mat-header-cell input {
