--- a/src/app/Monday/tasks/tasks.component.html
+++ b/src/app/Monday/tasks/tasks.component.html
@@ -1,6 +1,8 @@
 <div *ngIf="board">
     <h1>Tasks for Board ID: {{ boardId }}</h1>
-    
+  
+    <app-task-summary [groupSummary]="groupSummary"></app-task-summary>
+  
     <div class="group-list">
       <mat-card *ngFor="let group of board.groups" class="group-card">
         <mat-card-header (click)="toggleGroup(group)">
