--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -337,9 +337,16 @@
 
     <mat-tab label="יישומים/אנשי קשר">
       <!-- <app-tab2></app-tab2> -->
-      
+    
+
       <app-applications-list></app-applications-list>
     </mat-tab>
     <mat-tab label=" סטטוס שרתים"> <app-server-ping-check-app></app-server-ping-check-app></mat-tab>
+
+    <mat-tab label="Monday">
+      <!-- <app-tab2></app-tab2> -->
+      <app-task-summary [boardId]="'1335449086'"></app-task-summary>
+
+    </mat-tab>
   </mat-tab-group>
 </div>
