--- a/src/app/Monday/task-summary/task-summary.component.html
+++ b/src/app/Monday/task-summary/task-summary.component.html
@@ -1,3 +1,4 @@
+<!-- Group Summary Table -->
 <table mat-table [dataSource]="groupSummaryKeys" class="mat-elevation-z8">
     <ng-container matColumnDef="group">
       <th mat-header-cell *matHeaderCellDef>קטגוריה</th>
@@ -18,5 +19,28 @@
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  
+  <!-- User Summary Table -->
+  <table mat-table [dataSource]="userSummaryKeys" class="mat-elevation-z8">
+    <ng-container matColumnDef="user">
+      <th mat-header-cell *matHeaderCellDef>שם משתמש</th>
+      <td mat-cell *matCellDef="let user"> {{ user }} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="total">
+      <th mat-header-cell *matHeaderCellDef>סה"כ</th>
+      <td mat-cell *matCellDef="let user"> {{ userSummary[user].total }} </td>
+    </ng-container>
+  
+    <ng-container *ngFor="let status of statusKeys" [matColumnDef]="status">
+      <th mat-header-cell *matHeaderCellDef> {{ status }} </th>
+      <td mat-cell *matCellDef="let user">
+        {{ userSummary[user].statuses[status] || 0 }}
+      </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedUserColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedUserColumns;"></tr>
   </table>
   
