--- a/src/app/main-page-reports/main-page-reports.component.html
+++ b/src/app/main-page-reports/main-page-reports.component.html
@@ -27,19 +27,19 @@
     </ng-container>
     <ng-container matColumnDef="ReportName">
       <th mat-header-cell *matHeaderCellDef class="bold-header">שם הדוח</th>
-      <td mat-cell *matCellDef="let element">{{ element.reportName }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.ReportName }}</td>
     </ng-container>
     <ng-container matColumnDef="LinkAdress">
       <th mat-header-cell *matHeaderCellDef class="bold-header">שם הדוח באנגלית </th>
-      <td mat-cell *matCellDef="let element">{{ element.linkAdress }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.LinkAdress }}</td>
     </ng-container>
     <ng-container matColumnDef="LinkDescription">
       <th mat-header-cell *matHeaderCellDef class="bold-header"> תיאור הדוח</th>
-      <td mat-cell *matCellDef="let element">{{ element.linkDescription }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.LinkDescription }}</td>
     </ng-container>
     <ng-container matColumnDef="LinkStatus">
       <th mat-header-cell *matHeaderCellDef>דוח פעיל ? </th>
-      <td mat-cell *matCellDef="let element">{{ element.linkStatus }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.LinkStatus }}</td>
     </ng-container>
     
     <!-- <ng-container matColumnDef="linkToPage">
@@ -50,7 +50,7 @@
       <th mat-header-cell *matHeaderCellDef>הרשאות</th>
       <td mat-cell *matCellDef="let element">{{ element.permissions }}</td>
     </ng-container> -->
-    <ng-container matColumnDef="btn">
+    <ng-container matColumnDef="Btn">
       <th mat-header-cell *matHeaderCellDef class="bold-header">מעבר לדוחות</th>
       <td mat-cell *matCellDef="let element">
         <button
