--- a/src/app/reports-permissions/reports-permissions.component.html
+++ b/src/app/reports-permissions/reports-permissions.component.html
@@ -79,7 +79,7 @@
         </td>
       </ng-container>
       <ng-container matColumnDef="edit">
-        <th mat-header-cell *matHeaderCellDef>עדכון</th>
+        <th mat-header-cell *matHeaderCellDef>עריכת הדוח</th>
         <td mat-cell *matCellDef="let element">
           <button
             mat-raised-button
