--- a/src/app/reports-permissions/update-report/update-report.component.html
+++ b/src/app/reports-permissions/update-report/update-report.component.html
@@ -10,12 +10,12 @@
   <form [formGroup]="updateForm" class="custom-form">
     <mat-form-field>
       <mat-label>Link Description</mat-label>
-      <input matInput formControlName="linkDescription" />
+      <input matInput formControlName="LinkDescription" />
     </mat-form-field>
 
     <mat-radio-group
       aria-label="Select Link Status"
-      formControlName="linkStatus"
+      formControlName="LinkStatus"
     >
      
       <mat-radio-button
@@ -28,12 +28,12 @@
 
     <mat-form-field>
       <mat-label>Report Name</mat-label>
-      <input matInput formControlName="reportName" />
+      <input matInput formControlName="ReportName" />
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>Link Address</mat-label>
-      <input matInput formControlName="linkAdress" />
+      <input matInput formControlName="LinkAdress" />
     </mat-form-field>
 
     <div class="form-actions">
