--- a/src/app/chameleon-reports/dynamic-tables/dynamic-tables.component.html
+++ b/src/app/chameleon-reports/dynamic-tables/dynamic-tables.component.html
@@ -7,9 +7,7 @@
     </button>
   </div>
   <div class="nine">
-    <h1>
-      {{ titleUnit }}<span>{{ Title1 }}{{ Title2 }}{{ totalResults }}</span>
-    </h1>
+    <h1>{{ titleUnit }}<span>{{ Title1 }}{{ Title2 }}{{ totalResults }}</span></h1>
   </div>
 
   <form [formGroup]="filterForm" dir="rtl" class="filter-form">
@@ -17,43 +15,9 @@
       <div class="row search-count">
         <div class="col">
           <div dir="rtl" class="card">
-            <div dir="rtl" class="card-body">
-              <ng-container *ngFor="let column of columns; let i = index">
-                <div class="filter-row" *ngIf="i % 4 === 0">
-                  <mat-form-field class="filter-field" *ngIf="column == 'departName'">
-                    <mat-label class="filters">{{ getColumnLabel(column) }}</mat-label>
-                    <input type="text" matInput [formControl]="getFormControl(column)" [matAutocomplete]="auto" />
-                    <mat-autocomplete #auto="matAutocomplete">
-                      <mat-option *ngFor="let option of filteredResponsibilities | async" [value]="option">
-                        {{ option }}
-                      </mat-option>
-                    </mat-autocomplete>
-                  </mat-form-field>
-                  <mat-form-field *ngIf="column !== 'departName'" class="filter-field">
-                    <mat-label class="filters">{{ getColumnLabel(column) }}</mat-label>
-                    <div *ngIf="column !== 'insert_time' && column !== 'update_time'">
-                      <input matInput [formControl]="getFormControl(column)" class="filter-input" />
-                      <div class="name-select-wrapper">
-                        <mat-select *ngIf="column === 'ssP_DESCRIPTION'" [formControl]="getFormControl(column)" class="name-select">
-                          <mat-option *ngFor="let option of answerTextOptions" [value]="option">
-                            {{ option }}
-                          </mat-option>
-                        </mat-select>
-                      </div>
-                    </div>
-                    <div *ngIf="column == 'insert_time' || column == 'update_time'" #datepicker class="datepicker-field">
-                      <input matInput [formControl]="getFormControl(column)" [matDatepicker]="picker" dir="rtl" />
-                      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                      <mat-datepicker #picker></mat-datepicker>
-                    </div>
-                  </mat-form-field>
-                </div>
-              </ng-container>
-            </div>
+          
             <div class="reset-button-container">
-              <button mat-button (click)="resetFilters()" mat-raised-button color="primary" class="custom-button" matTooltip="Reset Filters">
-                <i class="material-icons">refresh</i>
-              </button>
+              
             </div>
           </div>
         </div>
@@ -63,13 +27,16 @@
       <mat-form-field class="long-search-bar">
         <mat-label class="filters" style="color: blue">חיפוש</mat-label>
         <input matInput [formControlName]="'globalFilter'" class="search-input" />
+
       </mat-form-field>
-      <div class="graph-button-container">
+      <button mat-button (click)="resetFilters()" mat-raised-button color="primary" class="custom-button" matTooltip="Reset Filters">
+        <i class="material-icons">refresh</i>
+      </button>
+    
         <img (click)="navigateToGraphPage()" matTooltip="Move To Graph" src="../../../../assets/graphIcon.png" width="50px" />
-      </div>
-      <div class="icon" matTooltip="Download Excel">
+      
         <img src="../../assets/excel.png" alt="Download" (click)="exportToExcel()" class="download-icon" width="50px" />
-      </div>
+      
     </div>
   </form>
 
