--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -55,7 +55,7 @@
             
                 <!-- Open Calls Column -->
                 <ng-container matColumnDef="open_calls">
-                  <th mat-header-cell *matHeaderCellDef>Open Calls</th>
+                  <th mat-header-cell *matHeaderCellDef>open Calls</th>
                   <td
                     mat-cell
                     *matCellDef="let element"
