--- a/src/app/contacts/add-edit-contact-dialog/add-edit-contact-dialog.component.html
+++ b/src/app/contacts/add-edit-contact-dialog/add-edit-contact-dialog.component.html
@@ -4,46 +4,46 @@
     <div class="form-row">
       <mat-form-field appearance="outline" class="form-field">
         <mat-label>Company Name</mat-label>
-        <input matInput formControlName="companyName" required>
+        <input matInput formControlName="CompanyName" required>
       </mat-form-field>
 
       <mat-form-field appearance="outline" class="form-field">
         <mat-label>Dept In Hospital</mat-label>
-        <input matInput formControlName="deptInHospital">
+        <input matInput formControlName="DeptInHospital">
       </mat-form-field>
 
       <mat-form-field appearance="outline" class="form-field">
         <mat-label>Name</mat-label>
-        <input matInput formControlName="name" required>
+        <input matInput formControlName="Name" required>
       </mat-form-field>
     </div>
 
     <div class="form-row">
       <mat-form-field appearance="outline" class="form-field">
         <mat-label>Position</mat-label>
-        <input matInput formControlName="position">
+        <input matInput formControlName="Position">
       </mat-form-field>
 
       <mat-form-field appearance="outline" class="form-field">
         <mat-label>Phone</mat-label>
-        <input matInput formControlName="phone">
+        <input matInput formControlName="Phone">
       </mat-form-field>
     </div>
 
     <div class="form-row">
       <mat-form-field appearance="outline" class="form-field">
         <mat-label>Email</mat-label>
-        <input matInput formControlName="email" >
+        <input matInput formControlName="Email" >
       </mat-form-field>
 
       <mat-form-field appearance="outline" class="form-field">
         <mat-label>Description</mat-label>
-        <input matInput formControlName="description">
+        <input matInput formControlName="Description">
       </mat-form-field>
     </div>
 
     <div class="toggle-container">
-      <mat-slide-toggle formControlName="active">
+      <mat-slide-toggle formControlName="Active">
         Active
       </mat-slide-toggle>
     </div>
