--- a/src/app/contacts/contacts-dialog/contacts-dialog.component.html
+++ b/src/app/contacts/contacts-dialog/contacts-dialog.component.html
@@ -19,39 +19,39 @@
       </div>
   
       <table mat-table [dataSource]="filteredContacts" class="mat-elevation-z8 contact-table" style="width: 100%;">
-        <ng-container matColumnDef="deptInHospital">
+        <ng-container matColumnDef="DeptInHospital">
           <th mat-header-cell *matHeaderCellDef> מחלקה בבית חולים </th>
-          <td mat-cell *matCellDef="let contact"> {{contact.deptInHospital}} </td>
+          <td mat-cell *matCellDef="let contact"> {{contact.DeptInHospital}} </td>
         </ng-container>
   
-        <ng-container matColumnDef="companyName">
+        <ng-container matColumnDef="CompanyName">
           <th mat-header-cell *matHeaderCellDef> שם החברה </th>
-          <td mat-cell *matCellDef="let contact"> {{contact.companyName}} </td>
+          <td mat-cell *matCellDef="let contact"> {{contact.CompanyName}} </td>
         </ng-container>
   
-        <ng-container matColumnDef="name">
+        <ng-container matColumnDef="Name">
           <th mat-header-cell *matHeaderCellDef> איש קשר </th>
-          <td mat-cell *matCellDef="let contact"> {{contact.name}} </td>
+          <td mat-cell *matCellDef="let contact"> {{contact.Name}} </td>
         </ng-container>
   
-        <ng-container matColumnDef="position">
+        <ng-container matColumnDef="Position">
           <th mat-header-cell *matHeaderCellDef> תפקיד </th>
-          <td mat-cell *matCellDef="let contact"> {{contact.position}} </td>
+          <td mat-cell *matCellDef="let contact"> {{contact.Position}} </td>
         </ng-container>
   
-        <ng-container matColumnDef="phone">
+        <ng-container matColumnDef="Phone">
           <th mat-header-cell *matHeaderCellDef> טלפון </th>
-          <td mat-cell *matCellDef="let contact"> {{contact.phone}} </td>
+          <td mat-cell *matCellDef="let contact"> {{contact.Phone}} </td>
         </ng-container>
   
-        <ng-container matColumnDef="email">
+        <ng-container matColumnDef="Email">
           <th mat-header-cell *matHeaderCellDef> מייל </th>
-          <td mat-cell *matCellDef="let contact"> {{contact.email}} </td>
+          <td mat-cell *matCellDef="let contact"> {{contact.Email}} </td>
         </ng-container>
   
-        <ng-container matColumnDef="description">
+        <ng-container matColumnDef="Description">
           <th mat-header-cell *matHeaderCellDef> תיאור </th>
-          <td mat-cell *matCellDef="let contact"> {{contact.description}} </td>
+          <td mat-cell *matCellDef="let contact"> {{contact.Description}} </td>
         </ng-container>
   
         <ng-container matColumnDef="actions">
