--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -343,10 +343,9 @@
     </mat-tab>
     <mat-tab label=" סטטוס שרתים"> <app-server-ping-check-app></app-server-ping-check-app></mat-tab>
 
-    <mat-tab label="Monday">
-      <!-- <app-tab2></app-tab2> -->
+    <!-- <mat-tab label="Monday">
       <app-task-summary [boardId]="'1335449086'"></app-task-summary>
 
-    </mat-tab>
+    </mat-tab> -->
   </mat-tab-group>
 </div>
