--- a/src/app/server-ping-check-app/manage-servers/manage-servers.component.html
+++ b/src/app/server-ping-check-app/manage-servers/manage-servers.component.html
@@ -11,25 +11,25 @@
       <!-- Hostname Column -->
       <ng-container matColumnDef="hostname">
         <th mat-header-cell *matHeaderCellDef> Hostname </th>
-        <td mat-cell *matCellDef="let server"> {{server.hostname}} </td>
+        <td mat-cell *matCellDef="let server"> {{server.Hostname}} </td>
       </ng-container>
 
       <!-- Description Column -->
       <ng-container matColumnDef="description">
         <th mat-header-cell *matHeaderCellDef> Description </th>
-        <td mat-cell *matCellDef="let server"> {{server.description}} </td>
+        <td mat-cell *matCellDef="let server"> {{server.Description}} </td>
       </ng-container>
 
       <!-- Type Column -->
       <ng-container matColumnDef="type">
         <th mat-header-cell *matHeaderCellDef> Type </th>
-        <td mat-cell *matCellDef="let server"> {{server.type}} </td>
+        <td mat-cell *matCellDef="let server"> {{server.Type}} </td>
       </ng-container>
 
       <!-- Created By Column -->
       <ng-container matColumnDef="createdBy">
         <th mat-header-cell *matHeaderCellDef> Created By </th>
-        <td mat-cell *matCellDef="let server"> {{server.createdBy}} </td>
+        <td mat-cell *matCellDef="let server"> {{server.CreatedBy}} </td>
       </ng-container>
 
       <!-- Actions Column -->
@@ -37,7 +37,7 @@
         <th mat-header-cell *matHeaderCellDef> Actions </th>
         <td mat-cell *matCellDef="let server">
           <button mat-raised-button color="primary" (click)="editServer(server)">Edit</button>
-          <button mat-raised-button color="warn" (click)="confirmDeleteServer(server.serverId)">Delete</button>
+          <button mat-raised-button color="warn" (click)="confirmDeleteServer(server.ServerId)">Delete</button>
         </td>
       </ng-container>
 
