--- a/src/app/server-ping-check-app/server-ping-check-app.component.scss
+++ b/src/app/server-ping-check-app/server-ping-check-app.component.scss
@@ -47,7 +47,8 @@
 
 /* Individual server card styles */
 .server-card {
-  width: 200px;
+  width: 175px;
+  //height: 175px;
   padding: 8px;
   color: rgb(0, 0, 0);
   text-align: center;
@@ -76,7 +77,7 @@ mat-card-title {
 
 mat-card-content p {
   margin: 0;
-  font-size: 0.9em;
+  font-size: 0.8em;
 }
 
 mat-card-content {
@@ -109,4 +110,13 @@ mat-card-content button {
 mat-form-field {
   width: 100%;
   margin-bottom: 4px;
+}
+.flex-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.flex-item {
+  margin: 0 10px;
 }
